[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/CensorButton/unpressed.png" type="Texture" id=1]
[ext_resource path="res://Game/CensorButton/pressed.png" type="Texture" id=2]
[ext_resource path="res://Game/CensorButton/button-bg.png" type="Texture" id=3]
[ext_resource path="res://Game/CensorButton/censor-button.gd" type="Script" id=4]
[ext_resource path="res://Game/CensorButton/disabled.png" type="Texture" id=5]

[node name="CensorButton" type="Control"]
margin_right = 600.0
margin_bottom = 285.0
rect_min_size = Vector2( 600, 285 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -142.5
margin_right = 300.0
margin_bottom = 142.5
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -45.0
margin_right = 250.0
margin_bottom = 45.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisabledSymbol" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = 120.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
